--- a/Configuration/components/configstore.yaml
+++ b/Configuration/components/configstore.yaml
@@ -1,12 +1,24 @@
+# apiVersion: dapr.io/v1alpha1
+# kind: Component
+# metadata:
+#   name: configstore
+# spec:
+#   type: configuration.redis
+#   version: v1
+#   metadata:
+#   - name: redisHost
+#     value: localhost:6379
+#   - name: redisPassword
+#     value: ""
+
+
 apiVersion: dapr.io/v1alpha1
 kind: Component
 metadata:
   name: configstore
 spec:
-  type: configuration.redis
+  type: configuration.azure.appconfig
   version: v1
   metadata:
-  - name: redisHost
-    value: localhost:6379
-  - name: redisPassword
-    value: ""
+  - name: connectionString
+    value: <connection string is enough>
